# BaboonRT

./: .gitmodules  CMakeLists.txt  CMakePresets.json
Assets/Shaders/: BaboonRT.frag  BaboonRT.vert
Code/include/: AABB.h  Application.h  BVH.h  Camera.h  Color.h  Hittable.h  HittableList.h  Interval.h  Material.h  Ray.h  RayTracer.h  Sphere.h  ThreadPool.h  Utils.h
Code/src/: AABB.cpp  Application.cpp  BVH.cpp  Camera.cpp  HittableList.cpp  Material.cpp  Ray.cpp  RayTracer.cpp  Sphere.cpp  ThreadPool.cpp  main.cpp
Libs/: CMakeLists.txt
